--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,94 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 .body{
     font-family: "Merriweather", serif;
+}
+/* banner section stylee start here */
+.banner-container{
+    width: 858px;
+    margin: 0 auto;
+    margin-top: 20px;
+   height: 390px;
+   
+    background-color: rgba(0, 0, 0, 0.5);
+    background-image: url(../images/Banner\ Image.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: overlay;
+}
+
+.banner-content{
+    display: flex;
+    flex-direction: column;
+    height: 390px;
+    justify-content: center;
+    text-align: center;
+}
+.banner-content p, h1{
+    color: white;
+}
+
+.banner-content p{
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.banner-content h1{
+    font-size: 46px;
+    font-weight: 900;
+}
+
+/* <!-- 65% off section style start here --> */
+.second-section-container{
+    width: 521px;
+height: 525px;
+margin: 0 auto;
+margin-top: 58px;
+border: 2px solid red;
+}
+
+.second-section-container{
+    display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+
+
+.second-section-container h1{
+    color: rgb(255, 0, 0);
+    font-family: Inter;
+    font-size: 57px;
+    font-weight: 700;
+   
+}
+
+.second-section-container p{
+    color: rgb(255, 0, 0);
+    font-family: Inter;
+    font-size: 15px;
+    font-weight: 500
+}
+
+.second-section-container h3{
+    color: rgb(7, 2, 17);
+font-family: Inter;
+font-size: 32px;
+font-weight: 700; 
+}
+
+.image-container{
+    width: 521px;
+height: 325px;
+}
+
+.image-container img{
+    width: 100;
+    height: 100%;
 }
