--- a/style/style.css
+++ b/style/style.css
@@ -239,12 +239,57 @@ justify-content: space-between;
  .gift{
     width: 100%;
  }
-
    .discount{
     height: 191px;
     height: 191px;
    }
 
+   /* portfolio style */
+.portfolio-section-container{
+width: 858px;
+height: 755px;
+margin: 0 auto;
+margin-top: 78px;
+}
 
- 
- 
+.portfolio-text-content h5{
+ color: rgb(255, 0, 0);
+font-family: Inter;
+font-size: 15px;
+font-weight: 500;
+margin-bottom: 5px
+}
+
+.portfolio-text-content h3 {
+    color: rgb(7, 2, 17);
+font-family: Merriweather;
+font-size: 31px;
+font-weight: 900;
+margin-bottom: 5px
+}
+.portfolio-text-content p{
+color: rgba(7, 2, 17, 0.6);
+font-family: Inter;
+font-size: 13px;
+font-weight: 400;
+margin-bottom: 20px;
+}
+
+/* portfolio item style */
+
+.item{
+ width: 275px;
+height: 292px;
+
+}
+.portfolio-items{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid: 10px;
+} 
+.item img{
+   width: 100%;
+   height: 100%;
+
+}
+
