--- a/style/style.css
+++ b/style/style.css
@@ -293,3 +293,59 @@ height: 292px;
 
 }
 
+/* fotter style */
+.footer-container{
+width: 858px;
+height: 400px;
+margin: 0 auto;
+background: rgb(7, 2, 17);
+margin: 0 auto;
+padding: 30px;
+}
+
+.contact{
+    color: white;
+    display: flex;
+}
+
+.footer-first-section{
+    display: flex;
+    color: white;
+    width: 90%;
+    margin: 0 auto;
+    justify-content: space-between;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.hr{
+    width: 90%;
+    margin: 0 auto; 
+   
+    
+}
+
+.social-icons{
+    width: 400px;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.footer-end-text{
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    color: white;
+    justify-content: space-between;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.hr1{
+    width: 90%;
+    margin: 0 auto;
+    margin-bottom: 50px;
+}
