--- a/style/style.css
+++ b/style/style.css
@@ -5,12 +5,14 @@
     margin: 0;
     padding: 0;
 }
-.body{
+body{
     font-family: "Merriweather", serif;
 }
 /* banner section stylee start here */
 .banner-container{
-    width: 858px;
+    width: 60%;
+    /* width: 858px; */
+    height: 100vh;
     margin: 0 auto;
     margin-top: 20px;
    height: 390px;
@@ -24,9 +26,9 @@
 }
 
 .banner-content{
+    height: 390px;
     display: flex;
     flex-direction: column;
-    height: 390px;
     justify-content: center;
     text-align: center;
 }
@@ -40,7 +42,7 @@
 }
 
 .banner-content h1{
-    font-size: 46px;
+    font-size: 40px;
     font-weight: 900;
 }
 
@@ -55,14 +57,6 @@ flex-direction: column;
 justify-content: center;
 align-items: center;
 }
-
-/* .second-section-container{
-    display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-} */
-
 
 .second-section-container h1{
     color: rgb(255, 0, 0);
@@ -93,14 +87,16 @@ height: 325px;
 }
 
 .image-container img{
-    width: 100;
+    width: 100%;
     height: 100%;
 }
+
 
 /* mdinight party section style */
 .midnight-party-container{
     width: 858px;
-    height: 390px;
+  height: 100%;
+    
     margin: 0 auto;
     margin-top: 78px;
     margin-bottom: 80px;
@@ -111,9 +107,19 @@ height: 325px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    
-
+    display: flex;
+    justify-content: space-between;
+  
 }
+
+/* .midnight-content{
+    width: 60%;
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    gap: 8rem;
+} */
+
 .left-side-content{
 width:50%;
 width: 417px;
@@ -151,7 +157,7 @@ margin-right: 200px;
 
 .right-side-content{
    
-    width: 226px;
+  width: 226px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -165,6 +171,98 @@ margin-right: 200px;
 .mid-img{
     width: 100%;
 }
+
+
+/* new-park-section-style */
+.new-park-section-container{
+    width: 858px;
+   height: 313px;
+   border-radius: 16px;
+   /* border: 2px solid red; */
+   background: linear-gradient(180.00deg, rgba(255, 0, 0, 0.1),rgba(255, 0, 0, 0) 100%);
+   }
+   
+   .new-park-text{
+       display: flex;
+       flex-direction: column;
+       height: 250px;
+       justify-content: center;
+       text-align: center;
+       padding: 10px;
+     
+   }
+       .new-park-text h4{
+       font-family: Inter;
+       font-size: 20px;
+       font-weight: 600; 
+       
+   
+       }
+   
+       .color{
+           color: red;
+       }
+   button{
+       width: 110px;
+       padding: 10px;
+       border: none;
+       border-radius: 5px;
+       background-color:red;
+       color: #ffffff;
+       font-size: 15px;
+       cursor: pointer;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       flex-direction: column;
+       margin: 0 auto;
+       
+       
+   }
+    /* comming soon section style */
+    .Coming-soon-container{
+        width: 858px;
+        height: 100%;
+    }
+
+    .Coming-soon-content{
+       
+       display: flex;
+       justify-content: space-between;
+       gap: 30px;
+       align-items: center;
+       
+    }
+   .text-content{
+       width: 40%;
+       padding: 30px;
+       text-align: center;  
+   }
+   
+   .text-content h4{
+       color: red;
+   }
+    .Ellipse img{
+       height: 150px;
+       border: 4px solid red;
+       border-radius: 50%;
+       padding: 20px;
+   
+    }
+   
+    .new-year{
+       text-align: center;
+       padding: 30px;
+    }
+    .new-year p{
+       margin: 20px 0;
+       
+    }
+     .new-year img{
+       height: 70px;
+     }
+
+
 /* holdy section style */
 .holiday-section-container{
  width: 858px;
@@ -175,7 +273,7 @@ position: relative;
 
 }
 
-.holdyday-text-container{
+.holiday-text-container{
 display: flex;
 flex-direction: column;
 justify-content: center;
@@ -185,8 +283,7 @@ height: 169px;
 margin: 0 auto;
 gap: 10px;
 }
-
-.holdyday-text-container h5{
+.holiday-text-container h5{
     color: rgb(7, 2, 17);
     font-family: Inter;
     font-size: 15px;
@@ -194,7 +291,7 @@ gap: 10px;
 }
 
 
-.holdyday-text-container h2{
+.holiday-text-container h2{
 font-family: Merriweather;
 font-size: 46px;
 font-weight: 900;
@@ -203,7 +300,7 @@ font-weight: 900;
 #holiday{
     color:rgb(255, 0, 0)
 }
-.holdyday-text-container p{
+.holiday-text-container p{
     color: rgba(7, 2, 17, 0.6);
     font-family: Inter;
     font-size: 13px;
@@ -218,15 +315,9 @@ top: 77%;
  }
 
  .gift-box{
-/* width: 518px;
-height: 430px; */
 width: 518px;
 margin: 0 auto;
 margin-left: 15px;
-/* display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center; */
 margin-top: 20px;
 margin-bottom: 20px;
 border: dashed 1 px white;
@@ -247,11 +338,14 @@ justify-content: space-between;
    /* portfolio style */
 .portfolio-section-container{
 width: 858px;
-height: 755px;
+height: 100%;
 margin: 0 auto;
 margin-top: 78px;
 }
 
+.portfolio-text-content{
+    text-align: center;
+}
 .portfolio-text-content h5{
  color: rgb(255, 0, 0);
 font-family: Inter;
@@ -277,26 +371,69 @@ margin-bottom: 20px;
 
 /* portfolio item style */
 
-.item{
- width: 275px;
-height: 292px;
 
-}
 .portfolio-items{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid: 10px;
+    gap: 20px;
+    
 } 
 .item img{
    width: 100%;
    height: 100%;
 
 }
+/* subcriber section style */
+.Subscribe-section-container{
+width: 858px;
+height: 100%;
+margin-top: 50px;
+border-radius: 10px;
+background: rgba(255, 0, 0, 0.05);
+margin-bottom: 50px;
+
+}
+
+.Subscribe-content{
+     text-align: center;
+     padding: 70px;
+}
+
+.img img{
+    height: 80px;
+}
+
+.subscribe-text-container h2{
+    color: rgb(7, 2, 17);
+    font-family: Merriweather;
+    font-size: 31px;
+    font-weight: 900;
+}
+
+.subscribe-text-container p{
+color: rgba(7, 2, 17, 0.6);
+font-family: Inter;
+font-size: 13px;
+font-weight: 400;
+}
+
+.Subscribe{
+    padding: 20px;
+}
+
+input{
+    background-color:white;
+    width: 50%;
+    padding: 10px;
+   border-radius: 20px;
+   border: none;
+}
+
 
 /* fotter style */
 .footer-container{
 width: 858px;
-height: 400px;
+height: 100%;
 margin: 0 auto;
 background: rgb(7, 2, 17);
 margin: 0 auto;
@@ -306,6 +443,7 @@ padding: 30px;
 .contact{
     color: white;
     display: flex;
+    
 }
 
 .footer-first-section{
@@ -326,10 +464,10 @@ padding: 30px;
 }
 
 .social-icons{
-    width: 400px;
+    width: 300px;
+    height: 50px;
     margin: 0 auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin:  20px auto;
     display: flex;
     justify-content: space-evenly;
 }
