--- a/style/responsive.css
+++ b/style/responsive.css
@@ -2,12 +2,15 @@
 
 @media screen and (max-width:576px) {
 
-    html, body {
+    html,body{
+        
         overflow-x: hidden;
       }
+    
      body {
         width:100%;
       }
+
 
     .banner-container,
     .second-section-container,
@@ -18,8 +21,10 @@
     .portfolio-section-container,
     .Subscribe-section-container,
     .footer-container{
-        width: 100%;
+       width: 100%;
     }
+
+
     .banner-content h1{
         font-size: 35px;
     }
@@ -40,7 +45,9 @@
     }
 
     .left-side-content p{
-       font-size: 15px;
+       font-size: 13px;
+       padding-right: 20px;
+       text-align: center;
        
     }
     .mid-img{
