--- a/style/style.css
+++ b/style/style.css
@@ -11,13 +11,16 @@ body{
     font-family: "Merriweather", serif;
 }
 
-
+body{
+    background-color: rgb(229, 240, 250);
+}
 /* banner section stylee start here */
 .banner-container{
-    width:60%;
+    width:100%;
+    height: 100vh;
     margin: 0 auto;
     margin-top: 20px;
-   height: 390px;
+   
    
     background-color: rgba(0, 0, 0, 0.5);
     background-image: url(../images/Banner\ Image.png);
@@ -28,29 +31,44 @@ body{
 }
 
 .banner-content{
-    height: 390px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
+    /* height: 390px; */
+       width: 400px 0 ;
+       margin: 0 auto;
+     height: 550px; 
+     display: flex; 
+     flex-direction: column; 
+     justify-content: center; 
+     text-align: center;     
 }
+
+
+
 .banner-content p, h1{
     color: white;
+    justify-content: center;
+    text-align: center;
+
 }
 
 .banner-content p{
-    font-size: 20px;
+    /* font-size: 20px; */
+    font-size: 25px;
     font-weight: 400;
+    text-align: center;
+    
+    
 }
 
 .banner-content h1{
-    font-size: 40px;
+    /* font-size: 40px; */
+    font-size:4rem;
     font-weight: 900;
+    text-align: center;
 }
 
 /* <!-- 65% off section style start here --> */
 .second-section-container{
-    width: 60%;
+width: 100%;
 margin: 0 auto;
 margin-top: 58px;
 display: flex;
@@ -95,7 +113,8 @@ height: 325px;
 
 /* mdinight party section style */
 .midnight-party-container{
-  width: 60%;
+  width: 100%;
+  height: 600px;
     margin: 0 auto;
     margin-top: 78px;
     margin-bottom: 80px;
@@ -106,14 +125,24 @@ height: 325px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    display: flex;
-    justify-content: space-between;
-  
+    /* display: flex;
+    justify-content: space-evenly;
+    gap: 10rem;  */
+    
 }
 
+
+.midnight-content{
+    width: 80%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;  
+    gap: 13rem; 
+}
+
+
 .left-side-content{
-width:50%;
-width: 417px;
+width: 450px;
 display: flex;
 flex-direction: column;
 justify-content: center;
@@ -123,14 +152,14 @@ padding: 30px;
 
 .left-side-content h2{
  color: rgb(255, 255, 255);
-font-size: 41px;
+font-size: 3rem;
 font-weight: 900;
     }
 
  .left-side-content p{
         color: rgba(255, 255, 255, 0.8);
         font-family: Inter;
-        font-size: 11px;
+        font-size: 14px;
         font-weight: 400;
         margin-top: 20px;
         margin-left: 20px;
@@ -139,7 +168,7 @@ font-weight: 900;
 #midnight-button{
     color: rgb(255, 255, 255);
 font-family: Inter;
-font-size: 13px;
+font-size: 15px;
 font-weight: 700;
 margin-top: 31px;
 margin-right: 200px;
@@ -147,7 +176,7 @@ margin-right: 200px;
 
 .right-side-content{
    
-  width: 226px;
+  width: 300px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -160,12 +189,13 @@ margin-right: 200px;
 
 .mid-img{
     width: 100%;
+    
 }
 
 
 /* new-park-section-style */
 .new-park-section-container{
-    width: 60%;
+    width: 100%;
     margin: 0 auto;
    border-radius: 16px;
    background: linear-gradient(180.00deg, rgba(255, 0, 0, 0.1),rgba(255, 0, 0, 0) 100%);
@@ -181,8 +211,8 @@ margin-right: 200px;
      
    }
        .new-park-text h4{
-       font-family: Inter;
-       font-size: 20px;
+        font-family: inter;
+       font-size: 30px;
        font-weight: 600; 
        
    
@@ -210,16 +240,15 @@ margin-right: 200px;
    }
     /* comming soon section style */
     .Coming-soon-container{
-        width: 60%;
+        width: 100%;
         margin: 0 auto;
-        
     }
 
     .Coming-soon-content{
        
        display: flex;
-       justify-content: space-between;
-       gap: 30px;
+       justify-content: space-evenly;
+       gap: 20px;
        align-items: center;
        
     }
@@ -255,7 +284,7 @@ margin-right: 200px;
 
 /* holdy section style */
 .holiday-section-container{
- width: 60%;
+ width: 100%;
  margin: 0 auto;
 margin-top: 20px;
 margin: 0 auto;
@@ -290,12 +319,13 @@ font-weight: 900;
     color:rgb(255, 0, 0)
 }
 .holiday-text-container p{
-    color: rgba(7, 2, 17, 0.6);
+    color: black;
     font-size: 13px;
     font-weight: 500;   
     }
  .solid-color{
- width: 858px;
+ /* width: 858px; */
+ width: 100%;
 height: 148px;
 background-color:  red;
 position: absolute;
@@ -303,7 +333,8 @@ top: 77%;
  }
 
  .gift-box{
-width: 518px;
+    width: 100%;
+/* width: 518px; */
 margin: 0 auto;
 margin-left: 15px;
 margin-top: 20px;
@@ -312,20 +343,23 @@ border: dashed 1 px white;
 position: relative;
 z-index: 1;
 display: flex;
-justify-content: space-between;
+justify-content: space-around;
+
 
  }
  .gift{
-    width: 100%;
+    /* width: 100%; */
+
+    width: 50%;
  }
-   .discount{
-    height: 191px;
-    height: 191px;
+   .offer{
+    width: 100%;
+    
    }
 
    /* portfolio style */
 .portfolio-section-container{
-width: 60%;
+width: 80%;
 margin: 0 auto;
 margin-top: 78px;
 }
@@ -369,7 +403,7 @@ margin-bottom: 20px;
 }
 /* subcriber section style */
 .Subscribe-section-container{
-width: 60%;
+width: 100%;
 margin: 0 auto;
 margin-top: 50px;
 border-radius: 10px;
@@ -407,7 +441,7 @@ font-weight: 400;
 
 input{
     background-color:white;
-    width: 50%;
+    width: 30%;
     padding: 10px;
    border-radius: 20px;
    border: none;
@@ -417,7 +451,7 @@ input{
 /* fotter style */
 .footer-container{
 
-width: 60%;
+width: 100%;
 margin: 0 auto;
 background: rgb(7, 2, 17);
 padding: 30px;
